Modificação no nome das pastas

--- a/qtdLinhasTabela/index.html
+++ b/qtdLinhasTabela/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>qtd linhas tabela</title>
 </head>
 
 <body>
     <div class="global">
         <div class="containerSide">
             <div class="linkEx">
-                <a class="button" href="../Exercicio2/index.html">Exercicio 2</a>
+                <a class="button" href="../somaTabela/index.html">Soma tabela</a>
             </div>
             <div class="linkEx">
-                <a class="button" href="../Exercicio3/index.html">Exercicio 3</a>
+                <a class="button" href="../tabAuto/">Tabela auto</a>
             </div>
             <div class="recarregar">
                 <input type="button" class="button" value="Recarregar página" id="reload" />
@@ -22,7 +22,7 @@
         </div>
         <div class="containerPrinc">
             <div class="cabeca">
-                <p>Aula 7 - Exercicio 1</p>
+                <p>Quantidade de linha na tabela</p>
             </div>
             <form action="">
                 <div>
