--- a/somaTabela/index.html
+++ b/somaTabela/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio_2</title>
-    <link rel="stylesheet" href="../Exercicio1/style.css">
+    <title>Soma tabela</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="global">
         <div class="containerSide">
             <div class="linkEx">
-                <a class="button" href="../Exercicio1/index.html">Exercicio 1</a>
+                <a class="button" href="../qtdLinhasTabela/">Qtd Linhas na tabela</a>
             </div>
             <div class="linkEx">
-                <a class="button" href="../Exercicio3/index.html">Exercicio 3</a>
+                <a class="button" href="../tabAuto/">Tabela auto</a>
             </div>
             <div>
                 <input type="button" class="button" value="Recarregar" onclick="reload()" />
@@ -23,7 +23,7 @@
         </div>
         <div class="containerPrinc">
             <div class="cabeca">
-                <p>Aula 7 - Exercicio 2</p>
+                <p>Soma tabela</p>
             </div>
             <div class="btnMiddle">
                 <input type="button" class="btn" id="btn" value="Somar idades">
