--- a/tabAuto/index.html
+++ b/tabAuto/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Exercicio1/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Tabela automática</title>
 </head>
 
 <body>
     <div class="global">
         <div class="containerSide">
             <div class="linkEx">
-                <a class="button" href="../Exercicio1/index.html">Exercicio 1</a>
+                <a class="button" href="../qtdLinhasTabela/index.html">Qtd Linhas Tabela</a>
             </div>
             <div class="linkEx">
-                <a class="button" href="../Exercicio2/index.html">Exercicio 2</a>
+                <a class="button" href="../somaTabela/">Soma tabela</a>
             </div>
             <div>
                 <input type="button" class="button" value="Recarregar" onclick="reload()" />
@@ -23,7 +23,7 @@
         </div>
         <div class="containerPrinc">
             <div class="cabeca">
-                <p>Aula 7 - Exercicio 3</p>
+                <p>Tabela automática</p>
             </div>
             <div>
                 <form action="">
