--- a/versao1/tabAuto/index.html
+++ b/versao1/tabAuto/index.html
@@ -12,10 +12,19 @@
     <div class="global">
         <div class="containerSide">
             <div class="linkEx">
-                <a class="button" href="../qtdLinhasTabela/index.html">Qtd Linhas Tabela</a>
+                <a class="button" href="/./index.html">Home</a>
             </div>
             <div class="linkEx">
-                <a class="button" href="../somaTabela/">Soma tabela</a>
+                <a class="button" href="../index.html">Gerar Linhas</a>
+            </div>
+            <div class="linkEx">
+                <a class="button" href="../somaTabela/">Somar dados</a>
+            </div>
+            <div class="linkEx">
+                <a class="button" href="../tabAuto/index.html">Tabela automática</a>
+            </div>
+            <div class="linkEx">
+                <a class="button" href="/./versao2/index.html">Versão 2</a>
             </div>
             <div>
                 <input type="button" class="button" value="Recarregar" onclick="reload()" />
