--- a/versao1/index.html
+++ b/versao1/index.html
@@ -11,13 +11,22 @@
     <div class="global">
         <div class="containerSide">
             <div class="linkEx">
-                <a class="button" href="../somaTabela/index.html">Soma tabela</a>
+                <a class="button" href="/./index.html">Home</a>
             </div>
             <div class="linkEx">
-                <a class="button" href="../tabAuto/">Tabela auto</a>
+                <a class="button" href="index.html">Gerar Linhas</a>
             </div>
-            <div class="recarregar">
-                <input type="button" class="button" value="Recarregar página" id="reload" />
+            <div class="linkEx">
+                <a class="button" href="./somaTabela/">Somar dados</a>
+            </div>
+            <div class="linkEx">
+                <a class="button" href="./tabAuto/index.html">Tabela automática</a>
+            </div>
+            <div class="linkEx">
+                <a class="button" href="/./versao2/index.html">Versão 2</a>
+            </div>
+            <div>
+                <input type="button" class="button" value="Recarregar" onclick="reload()" />
             </div>
         </div>
         <div class="containerPrinc">
