--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <article>
             <p>Todos os códigos estão no meu GitHub</p>
             <p>
-                <a href="https://github.com/Marceggl/ManipulandoTabelaJS">Marceggl</a>
+                <a href="https://github.com/Marceggl/ManipulandoTabelaJS" target="_blank">Marceggl</a>
             </p>
         </article>
         <footer>
