--- a/versao2/index.html
+++ b/versao2/index.html
@@ -36,7 +36,7 @@
             <p>Marcel Fernando - Nov/2020</p>
         </footer>
     </div>
-    <script src="./lnAuto.js"></script>
+    <script src="./Exercicio1/lnAuto.js"></script>
 </body>
 
 </html>
